Edit readme and index for clarity

--- a/views/index.html
+++ b/views/index.html
@@ -13,8 +13,8 @@
 		</ul>
 		<p>To get subsequent sets of ten results use the offset query parameter (1 gets 11-20, 2 gets 21-30 and so on):</p>
 		<code>https://fcc-paulbert-imagesearch.herokuapp.com/imagesearch/{query}?offset={pagenum}</code>
+		<p>The below will return a JSON array with the most recent search queries and the time the search was done</p>
 		<code>https://fcc-paulbert-imagesearch.herokuapp.com/latest/imagesearch</code>
-		<p>Will return a JSON array with the most recent search queries and the time the search was done</p>
 		<h2>Try some searches!</h2>
 		<p><a href="https://fcc-paulbert-imagesearch.herokuapp.com/imagesearch/bacon">bacon</a></p>
 		<p><a href="https://fcc-paulbert-imagesearch.herokuapp.com/imagesearch/blurst%20of%20times">blurst of times</a></p>
